context menu: to avoid container overflow bugs, we copy the context menu to the DOM body

--- a/src/context-menu/css/objects/_honeycomb.context-menu.objects.scss
+++ b/src/context-menu/css/objects/_honeycomb.context-menu.objects.scss
@@ -36,7 +36,7 @@
     }
 }
 
-.js-context-menu--open .js-context-menu__list {
+.js-context-menu__list--open {
     transform: scale(1, 1);
     box-shadow: 0 0 10px color('grey', 4);
 }
